# wikipu

./: .compliance_baseline.json  .gitignore  .gitmodules  .wikiignore  2026-04-09-034829-local-command-caveatcaveat-the-messages-below.txt  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  changelog.md  deterministic_structure_measuring.md  knowledge_graph.json  pyproject.toml  structural_heatmap.py  wiki-compiler
.gemini/: settings.json
.obsidian/: graph.json  workspace.json
.serena/: project.yml
.sldb/: store_index.yaml
desk/: Gates.md  STANDARDS.md  mempalace_extraction.md
drawers/: Board.md  OP-RULE-Query-Before-Read.md  audit-auto-task.md  autopoietic-loop.md  cleanup-looting-pi.md  cross-ruling-audit.md  executable-extraction-plan.md  finish-sldb-models.md  graph-edges-not-populated.md  ingest-raw-unimplemented.md  ingest-raw.md  kgdb-migration-plan.md  kgdb-module-ownership-audit.md  kgdb-storage-boundary.md  ontology-package-spec.md  pirate-teach-wikicompiler.md  sldb-ci-hook.md  sldb-energy-audit.md  sldb-ingest-integration.md  sldb-scaffold-integration.md
experiments/: face_experiments.py
instructions/: README.md  context_compiler-instructions.md  executor-instructions.md  supervisor-instructions.md
manifests/: raw_sources.csv
plan_docs/: 2026-04-08-three-phase-graph.md  issues.md
raw/: autopoiesis_system.md  board_gate_pattern.md  claw_session.md  cleansing_protocol.md  desk_zone.md  facet_orthogonalization.md  facets_as_questions.md  git_tracked_nodes.md  graph_construction_process.md  karpathy_tweet.md  methodology_synthesis.md  methodology_synthesis_addendum.md  methodology_synthesis_extended.md  methodology_synthesis_graph_routing.md  proposed_zone_reorganization.md  socratic_protocol.md  sourcetalk.txt  system_concept.md  trail_collect.md  unimplemented_from_sourcetalk.md  wiki_construction_principles.md
sldb_example/: README.md  guide.data.yaml  guide.input.md  guide_model.py
tests/: test_artifact_validation.py  test_auditor.py  test_bootstrap_upgrade.py  test_cleanser.py  test_cleansing_extended.py  test_context_checklists.py  test_context_contract.py  test_context_issues.py  test_context_prose.py  test_context_routing.py  test_context_tasks.py  test_coordinator_gates.py  test_cycle_persistence.py  test_delta_compile.py  (+25 more)
(+2472 files in other folders)
