[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wikipu"
version = "1.0.0"
description = "Knowledge Graph compiler for LLM-driven development. Enforces structural integrity and builds deterministic NetworkX graphs."
authors = [{name = "JP", email = "jp@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "networkx>=3.0"
]

[project.scripts]
wiki-compiler = "wiki_compiler.main:main"
